[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Settings.gd" type="Script" id=1]

[node name="Settings" type="CenterContainer"]
margin_right = 1023.0
margin_bottom = 599.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_left = 422.0
margin_top = 202.0
margin_right = 601.0
margin_bottom = 396.0
grow_horizontal = 2
grow_vertical = 2

[node name="Titel" type="Label" parent="HBoxContainer"]
margin_right = 179.0
margin_bottom = 14.0
grow_horizontal = 2
text = "Settings"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_top = 18.0
margin_right = 179.0
margin_bottom = 88.0

[node name="Game" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 179.0
margin_bottom = 14.0
text = "Game"

[node name="Muffins" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 179.0
margin_bottom = 42.0

[node name="Has Muffins" type="CheckBox" parent="HBoxContainer/VBoxContainer/Muffins"]
margin_right = 75.0
margin_bottom = 24.0
text = "Muffins"

[node name="Num Muffins" type="HSlider" parent="HBoxContainer/VBoxContainer/Muffins"]
margin_left = 79.0
margin_right = 179.0
margin_bottom = 16.0
grow_vertical = 2
rect_min_size = Vector2( 100, 0 )
min_value = 10.0
value = 10.0
tick_count = 10
ticks_on_borders = true

[node name="Flyers" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 179.0
margin_bottom = 70.0

[node name="Has Flyers" type="CheckBox" parent="HBoxContainer/VBoxContainer/Flyers"]
margin_right = 66.0
margin_bottom = 24.0
text = "Flyers"

[node name="Num Flyers" type="HSlider" parent="HBoxContainer/VBoxContainer/Flyers"]
margin_left = 70.0
margin_right = 170.0
margin_bottom = 16.0
grow_vertical = 2
rect_min_size = Vector2( 100, 0 )
min_value = 10.0
value = 10.0
tick_count = 10
ticks_on_borders = true

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_top = 92.0
margin_right = 179.0
margin_bottom = 194.0

[node name="Audio" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 179.0
margin_bottom = 14.0
text = "Audio"

[node name="Ambient Sound" type="CheckButton" parent="HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 179.0
margin_bottom = 58.0
text = "Ambient sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound FX" type="CheckButton" parent="HBoxContainer/VBoxContainer2"]
margin_top = 62.0
margin_right = 179.0
margin_bottom = 102.0
text = "Sound FX"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="HBoxContainer/VBoxContainer/Flyers/Has Flyers" to="." method="_on_Has_Flyers_toggled"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/Flyers/Num Flyers" to="." method="_on_Num_Flyers_value_changed"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer2/Ambient Sound" to="." method="_on_Ambient_Sound_toggled"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer2/Sound FX" to="." method="_on_Sound_FX_toggled"]
